# BatteryRecycle_SV1

./: .gitignore  CMakeLists.txt  DeviceAPI.c  DeviceAPI.h  Gpio.c  Gpio.h  Motor.c  Motor.h  Proc_fw.c  Proc_fw.h  README.md  backstage.cpp  backstage.h  backstage.ui  backstagelogin_page.cpp  backstagelogin_page.h  backstagelogin_page.ui  clockbus.cpp  clockbus.h  devicemonitor.cpp  devicemonitor.h  erroritem_dialog.cpp  erroritem_dialog.h  erroritem_dialog.ui  glable.h  global.cpp  global.h  homepage.cpp  homepage.h  homepage.ui  idlewatcher.cpp  idlewatcher.h  log.c  log.h  loginerr_dialog.cpp  loginerr_dialog.h  loginerr_dialog.ui  machineerr_dialog.cpp  machineerr_dialog.h  machineerr_dialog.ui  (+45 more)
docs/: README.md  執行命令.txt  版本紀錄.md  版本與提交習慣.txt
openspec/changes/store-name-and-time-display/: design.md  proposal.md  tasks.md
openspec/changes/store-name-and-time-display/specs/store-and-time-display/: spec.md
新的/: DeviceAPI.h  Proc_fw.c  ws281x.c
舊函式庫/: DeviceAPI.c  DeviceAPI.h  Gpio.c  Gpio.h  Proc_fw.c  Proc_fw.h  gpio_interface.cpp  gpio_interface.h  main.cpp  timer.h
